# server/docs/swagger.yaml
@@ -305,6 +305,58 @@ paths:
       summary: upload file action via form file input.
       tags:
       - File
+  /api/post/del/one:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Post ID for deleting
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK - delete successfully
+        "400":
+          description: Fail - incorrect query param id
+        "404":
+          description: Fail - not found
+        "500":
+          description: Fail - internal error
+      security:
+      - ApiKeyAuth: []
+      summary: delete one Post content.
+      tags:
+      - Post
+  /api/post/erase/one:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Post ID for erasing
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK - erase successfully
+        "400":
+          description: Fail - incorrect query param id
+        "404":
+          description: Fail - not found
+        "500":
+          description: Fail - internal error
+      security:
+      - ApiKeyAuth: []
+      summary: erase one Post content permanently.
+      tags:
+      - Post
   /api/post/follower/ids:
     get:
       consumes:
